packages/taquito-michel-codec/test/contracts_012/ill_typed/map_failwith.tz
# Test that MAP {FAILWITH} is not allowed by the typechecker
parameter (list nat);
storage unit;
code { UNPAIR; MAP {FAILWITH}; DROP; NIL operation; PAIR }
